# python-sdk

./: .gitignore  README.md  generate_proto.sh
.github/workflows/: ci.yml  release.yml
client/: pyproject.toml
client/corvo_client/: __init__.py  client.py  conn.py  pool.py  rpc.py
tests/: test_integration.py  test_wire_format.py
worker/: pyproject.toml
worker/corvo_worker/: __init__.py  rpc.py  worker.py
